--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ db:
     - ./mysql:/var/lib/mysql
   environment:
     MYSQL_ROOT_PASSWORD: root
-    MYSQL_USER: admin
-    MYSQL_PASSWORD: test
+    MYSQL_USER: trasteros
+    MYSQL_PASSWORD: I7#g71pNiW6y
     MYSQL_DATABASE: database
   ports:
     - "8889:3306"
