quitar contraseña por defecto en mysql admin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,5 +30,5 @@ phpmyadmin:
     - 8890:80
   environment:
     MYSQL_USER: admin
-    MYSQL_PASSWORD: test
-    MYSQL_DATABASE: database
+    MYSQL_PASSWORD: trasteros
+    MYSQL_DATABASE: I7#g71pNiW6y
