añadir maximo de intentos fallidos

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ db:
     - ./mysql:/var/lib/mysql
   environment:
     MYSQL_ROOT_PASSWORD: root
-    MYSQL_USER: trasteros
-    MYSQL_PASSWORD: I7#g71pNiW6y
+    MYSQL_USER: admin
+    MYSQL_PASSWORD: I7g71pNiW6y
     MYSQL_DATABASE: database
   ports:
     - "8889:3306"
@@ -29,6 +29,6 @@ phpmyadmin:
   ports:
     - 8890:80
   environment:
-    MYSQL_USER: trasteros
-    MYSQL_PASSWORD: I7#g71pNiW6y
-    MYSQL_DATABASE: db
+    MYSQL_USER: admin
+    MYSQL_PASSWORD: I7g71pNiW6y
+    MYSQL_DATABASE: database
